# deepgym

./: .gitignore  README.md
deepgym/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
deepgym/.github/workflows/: ci.yml
deepgym/data/cyberbench/: README.md  artifact_eval_daytona_5.jsonl  artifact_eval_daytona_5.summary.json  artifact_eval_local_3.jsonl  artifact_eval_local_3.summary.json  seed_specs.jsonl  seed_specs_glm.jsonl  top100_artifact_eval_local.jsonl  top100_artifact_eval_local.summary.json  top100_eval.jsonl  top100_summary.json
deepgym/docs/: cyberbench.md  rl-primer.html
deepgym/examples/: run_example.py
deepgym/examples/python_sorting/: reference_solution.py  task.md  verifier.py
deepgym/examples/string_manipulation/: verifier.py
deepgym/examples/two_sum/: reference_solution.py  task.md  verifier.py
deepgym/huggingface/: app.py  requirements.txt
deepgym/notebooks/: quickstart.ipynb
deepgym/scripts/: demo_grpo_reward.py  demo_trl_grpo.py  generate_cyberbench_seeds.py  import_bigcodebench.py  import_evalplus.py  import_humaneval.py  import_mbpp.py  inspect_cybergym_hf.py  publish.sh  run_blackbox_scan.py  run_cybergym_artifact_eval.py  run_cybergym_deepgym_eval.py  run_exploit_scan.py  run_rl_discovery.py  smoke_zai_deepgym.py  upload_hf_datasets.py  validate_bigcodebench.py
deepgym/src/deepgym/: __init__.py  adversarial.py  async_core.py  benchmark_envs.py  benchmark_ops.py  cli.py  computer_use.py  core.py  cyberbench.py  cybergym_artifacts.py  exceptions.py  exploit_db.py  gym.py  models.py  multi_turn.py  registry.py  reward_qa.py  rl_exploit_discovery.py  sandbox.py  verifier.py  verifier_template.py  web.py
deepgym/src/deepgym/api/: app.py  deps.py  routes.py  schemas.py
deepgym/src/deepgym/envs/: __init__.py  registry.json
deepgym/src/deepgym/envs/anagram_check/: metadata.json  task.md  verifier.py
deepgym/src/deepgym/envs/binary_search/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/climbing_stairs/: metadata.json  task.md  verifier.py
deepgym/src/deepgym/envs/coin_change/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/fizzbuzz/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/group_anagrams/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/house_robber/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/level_order_traversal/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/longest_common_subsequence/: metadata.json  task.md  verifier.py
deepgym/src/deepgym/envs/longest_consecutive/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/matrix_spiral/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/max_subarray/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/merge_intervals/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/palindrome_check/: metadata.json  task.md  verifier.py
deepgym/src/deepgym/envs/python_sorting/: verifier.py
deepgym/src/deepgym/envs/remove_duplicates/: metadata.json  reference_solution.py  task.md  verifier.py
deepgym/src/deepgym/envs/reverse_string/: metadata.json  task.md  verifier.py
deepgym/src/deepgym/envs/roman_to_integer/: metadata.json  reference_solution.py  (+2 more)
deepgym/src/deepgym/integrations/: __init__.py  axolotl.py  dapo.py  hf.py  lm_eval.py  openrlhf.py  reward.py  trl.py  verl.py  zai.py
deepgym/src/deepgym/static/: web_ui.html
deepgym/tests/: conftest.py  test_adversarial.py  test_api.py  test_benchmark_envs.py  test_cli.py  test_core.py  test_cyberbench_envs.py  test_cyberbench_seed_pipeline.py  test_cybergym_artifacts.py  test_envs_smoke.py  test_exploit_db.py  test_gym.py  test_integrations.py  test_integrations_hf.py  test_integrations_lm_eval.py  test_integrations_zai.py  test_local_executor.py  test_models.py  test_multi_turn.py  test_per_test_traces.py  test_registry.py  test_reward_qa.py  test_verifier_template.py  test_web.py
(+46 files in other folders)
